--- a/index.html
+++ b/index.html
@@ -9,5 +9,11 @@
   <body>
     <h1>Hello world!</h1>
     <p>How are you?</p>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis,
+      magnam vel obcaecati ipsa dolores perferendis officia non deleniti? Natus
+      mollitia, quam ipsum adipisci hic culpa fugiat accusamus. Tempore,
+      recusandae quibusdam.
+    </p>
   </body>
 </html>
