Add some changes

--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
       mollitia, quam ipsum adipisci hic culpa fugiat accusamus. Tempore,
       recusandae quibusdam.
     </p>
+    <h2>Mmm, a hotfix.</h2>
   </body>
 </html>
