--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
       mollitia, quam ipsum adipisci hic culpa fugiat accusamus. Tempore,
       recusandae quibusdam.
     </p>
+    <p>New changes.</p>
   </body>
 </html>
