--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <h1>Hello world!</h1>
     <p>How are you?</p>
+    <h1>hotfix</h1>
     <p>
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis,
       magnam vel obcaecati ipsa dolores perferendis officia non deleniti? Natus
