--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
     <p>wou</p>
     <h5>AAAAAAAAAAh</h5>
     <p>release v1.8.0 changes</p>
+    <p>release v1.9.0 changes</p>
   </body>
 </html>
