--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@
     <h5>AAAAAAAAAAh</h5>
     <p>release v1.8.0 changes</p>
     <p>release v1.9.0 changes</p>
+    <p>hotfix/tet-2 changes</p>
   </body>
 </html>
