--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@
     <p>release v1.8.0 changes</p>
     <p>release v1.9.0 changes</p>
     <p>hotfix/tet-2 changes</p>
+    <p>more changes</p>
   </body>
 </html>
