--- a/index.html
+++ b/index.html
@@ -27,5 +27,7 @@
     <p>hotfix/tet-2 changes</p>
     <p>more changes</p>
     <p>bla bla bla</p>
+    <p>blu blu</p>
+    <p>asdada</p>
   </body>
 </html>
