--- a/index.html
+++ b/index.html
@@ -26,5 +26,6 @@
     <p>release v1.9.0 changes</p>
     <p>hotfix/tet-2 changes</p>
     <p>more changes</p>
+    <p>bla bla</p>
   </body>
 </html>
